kltn-be/Kubernetes/admin-service.yaml
# ---- admin-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: default
  labels: { app: admin-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: admin-service } }
  template:
    metadata: { labels: { app: admin-service } }
    spec:
      containers:
        - name: admin-service
          image: thanhvu011/thanhvu-chitruong-admin-service:0.0.8
          imagePullPolicy: Always
          ports: [ { containerPort: 8091 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: admin-service }
  ports:
    - port: 8091
      targetPort: 8091
      protocol: TCP
