kltn-be/Kubernetes/email-service.yaml
# ---- email-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  namespace: default
  labels: { app: email-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: email-service } }
  template:
    metadata: { labels: { app: email-service } }
    spec:
      containers:
        - name: email-service
          image: thanhvu011/thanhvu-chitruong-email-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8082 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: email-service }
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
