kltn-be/Kubernetes/eurekaservice.yaml

# =========================
# Eureka
# =========================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: default
spec:
  replicas: 1
  selector: { matchLabels: { app: eureka-server } }
  template:
    metadata: { labels: { app: eureka-server } }
    spec:
      containers:
        - name: eureka
          image: thanhvu011/thanhvu-chitruong-eureka-server:0.0.6
          imagePullPolicy: Always
          ports: [ { containerPort: 8761 } ]
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: default
spec:
  type: ClusterIP
  selector: { app: eureka-server }
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
