kltn-be/Kubernetes/fast-api.yaml
# =========================
# CBF API (FastAPI) + PVC
# =========================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbf-api
  namespace: default
  labels: { app: cbf-api }
spec:
  replicas: 1
  selector: { matchLabels: { app: cbf-api } }
  template:
    metadata: { labels: { app: cbf-api } }
    spec:
      containers:
        - name: cbf-api
          image: thanhvu011/cbf-fastapi:1.2
          imagePullPolicy: Always
          ports: [ { containerPort: 8000 } ]
          volumeMounts:
            - { name: deploy-data, mountPath: /app/deploy_data }
            - { name: data-raw,   mountPath: /app/data_raw }
          resources:
            requests: { memory: "2Gi", cpu: "500m" }
            limits:   { memory: "4Gi", cpu: "1" }
      volumes:
        - name: deploy-data
          persistentVolumeClaim: { claimName: cbf-deploy-data-pvc }
        - name: data-raw
          persistentVolumeClaim: { claimName: cbf-data-raw-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: cbf-api
  namespace: default
spec:
  type: LoadBalancer
  selector: { app: cbf-api }
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
