kltn-be/Kubernetes/mysql.yaml
# =========================
# MySQL (1 instance, nhiều DB qua createDatabaseIfNotExist)
# =========================
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: mysql-pvc
#  namespace: default
#spec:
#  accessModes: ["ReadWriteOnce"]
#  resources:
#    requests:
#      storage: 2Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: default
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels: { app: mysql }
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - { name: mysql-storage, mountPath: /var/lib/mysql }
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  type: LoadBalancer
  selector: { app: mysql }
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
