kltn-be/Kubernetes/order-service.yaml
# ---- order-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: default
  labels: { app: order-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: order-service } }
  template:
    metadata: { labels: { app: order-service } }
    spec:
      containers:
        - name: order-service
          image: thanhvu011/thanhvu-chitruong-order-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8086 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: order-service }
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
