kltn-be/Kubernetes/payment-service.yaml
# ---- payment-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: default
  labels: { app: payment-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: payment-service } }
  template:
    metadata: { labels: { app: payment-service } }
    spec:
      containers:
        - name: payment-service
          image: thanhvu011/thanhvu-chitruong-payment-service:0.0.9
          imagePullPolicy: Always
          ports: [ { containerPort: 8087 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: payment-service }
  ports:
    - port: 8087
      targetPort: 8087
      protocol: TCP
