kltn-be/Kubernetes/product-service.yaml
# ---- product-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: default
  labels: { app: product-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: product-service } }
  template:
    metadata: { labels: { app: product-service } }
    spec:
      containers:
        - name: product-service
          image: thanhvu011/thanhvu-chitruong-product-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8083 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: product-service }
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
