kltn-be/Kubernetes/recommend-service.yaml
# ---- recommend-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend-service
  namespace: default
  labels: { app: recommend-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: recommend-service } }
  template:
    metadata: { labels: { app: recommend-service } }
    spec:
      containers:
        - name: recommend-service
          image: thanhvu011/thanhvu-chitruong-recommend-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8088 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: recommend-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: recommend-service }
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
