kltn-be/Kubernetes/search-service.yaml
# ---- search-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: default
  labels: { app: search-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: search-service } }
  template:
    metadata: { labels: { app: search-service } }
    spec:
      containers:
        - name: search-service
          image: thanhvu011/thanhvu-chitruong-search-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8085 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: default
spec:
  type: LoadBalancer
  selector: { app: search-service }
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
