kltn-be/Kubernetes/seller-service.yaml
# ---- seller-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-service
  namespace: default
  labels: { app: seller-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: seller-service } }
  template:
    metadata: { labels: { app: seller-service } }
    spec:
      containers:
        - name: seller-service
          image: thanhvu011/thanhvu-chitruong-seller-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8089 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: seller-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: seller-service }
  ports:
    - port: 8089
      targetPort: 8089
      protocol: TCP
