kltn-be/Kubernetes/upload-service.yaml
# ---- upload-service ----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: default
  labels: { app: upload-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: upload-service } }
  template:
    metadata: { labels: { app: upload-service } }
    spec:
      containers:
        - name: upload-service
          image: thanhvu011/thanhvu-chitruong-upload-service:0.0.7
          imagePullPolicy: Always
          ports: [ { containerPort: 8090 } ]
          resources:
            requests: { memory: "512Mi", cpu: "250m" }
            limits:   { memory: "1Gi",   cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: default
spec:
  type: ClusterIP
  selector: { app: upload-service }
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
